--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "typescript": "~2.4.2",
     "@angular/animations": "^6.0.3",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
@@ -22,7 +23,13 @@
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "angular2-token": "^0.2.0-beta.14",
+    "bootstrap": "4.0.0-alpha.6",
+    "bootstrap-datepicker": "^1.7.1",
+    "jquery": "^3.2.1",
+    "jquery-ui": "^1.12.1",
+    "ng-bootstrap": "^1.6.3"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
@@ -43,6 +50,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.4.2",
   }
 }
