--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "private": true,
   "dependencies": {
-    "typescript": "~2.4.2",
     "@angular/animations": "^6.0.3",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
@@ -21,15 +20,21 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26",
-    "angular2-token": "^0.2.0-beta.14",
+    "@ng-bootstrap/ng-bootstrap": "^3.0.0",
+    "@types/jquery": "^3.2.17",
+    "@types/jqueryui": "^1.12.0",
+    "angular2-fontawesome": "^5.2.1",
     "bootstrap": "4.0.0-alpha.6",
     "bootstrap-datepicker": "^1.7.1",
+    "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
-    "ng-bootstrap": "^1.6.3"
+    "ng-bootstrap": "^1.6.3",
+    "rxjs": "^6.0.0",
+    "rxjs-compat": "6.0.0-beta.1",
+    "typescript": "~2.7.2",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
@@ -50,7 +55,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.4.2"
+    "tslint": "~5.9.1"
   }
 }
