--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -7,7 +7,7 @@
     "lib": [ "es2015", "dom" ],
     "module": "commonjs",
     "moduleResolution": "node",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "sourceMap": true,
     "suppressImplicitAnyIndexErrors": true,
     "target": "es5"
