--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
     "ng-bootstrap": "^1.6.3",
+    "ng-flash-messages": "^0.2.0",
     "rxjs": "^6.0.0",
     "rxjs-compat": "6.0.0-beta.1",
     "typescript": "~2.7.2",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "ngx-bootstrap": "^2.0.1"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
