--- a/package.json
+++ b/package.json
@@ -25,19 +25,21 @@
     "@types/jqueryui": "^1.12.0",
     "angular2-fontawesome": "^5.2.1",
     "bootstrap": "4.0.0-alpha.6",
-    "bootstrap-datepicker": "^1.7.1",
+    "bootstrap-datepicker": "^1.8.0",
+    "bootstrap-timepicker": "^0.5.2",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
     "ng-bootstrap": "^1.6.3",
     "ng-flash-messages": "^0.2.0",
+    "ng2-accordion": "^0.0.15",
+    "ng2-datetime": "^1.4.0",
+    "ngx-bootstrap": "^2.0.1",
     "rxjs": "^6.0.0",
     "rxjs-compat": "6.0.0-beta.1",
     "typescript": "~2.7.2",
-    "zone.js": "^0.8.26",
-    "ngx-bootstrap": "^2.0.1",
-    "ng2-accordion": "^0.0.15"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
