--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^3.0.0",
     "@types/jquery": "^3.2.17",
     "@types/jqueryui": "^1.12.0",
+    "angular-momentjs": "^0.2.2",
     "angular2-fontawesome": "^5.2.1",
     "bootstrap": "4.0.0-alpha.6",
     "bootstrap-datepicker": "^1.8.0",
