--- a/package.json
+++ b/package.json
@@ -25,18 +25,20 @@
     "@types/jqueryui": "^1.12.0",
     "angular-momentjs": "^0.2.2",
     "angular2-fontawesome": "^5.2.1",
-    "bootstrap": "4.0.0-alpha.6",
+    "bootstrap": "^4.0.0-alpha.6",
     "bootstrap-datepicker": "^1.8.0",
     "bootstrap-timepicker": "^0.5.2",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
+    "moment": "^2.22.2",
     "ng-bootstrap": "^1.6.3",
     "ng-flash-messages": "^0.2.0",
     "ng2-accordion": "^0.0.15",
     "ng2-datetime": "^1.4.0",
     "ngx-bootstrap": "^2.0.1",
+    "open-iconic": "^1.1.1",
     "rxjs": "^6.0.0",
     "rxjs-compat": "6.0.0-beta.1",
     "typescript": "~2.7.2",
